src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Account360__c</fullName>
        <label>Account360</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Status__c</fullName>
        <description>Active or inactive status depending on whether or not account is a producing account currently &quot;owned&quot; by user (Pro Rep).

Active = account is owned and serviced by Pro rep &amp; is producing (bringing in sales)
Inactive = account transferred to a new Pro Rep and old rep is no longer servicing OR account no longer purchasing with Behr</description>
        <label>Account Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account_Team_Update_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Account Team Update Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_type__c</fullName>
        <label>Account type</label>
        <picklist>
            <picklistValues>
                <fullName>Consumer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Designer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Painter</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Actual_Employee_Size__c</fullName>
        <label>Actual Employee Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_Sales_Volume__c</fullName>
        <label>Actual Sales Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Advert_Type__c</fullName>
        <label>Advert Type</label>
        <picklist>
            <picklistValues>
                <fullName>Multiview PDCA Banner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Print</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Publication Online Banner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Blast</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>All_Time_Direct_Sales__c</fullName>
        <description>All Time Direct Sales</description>
        <label>All Time Direct Sales</label>
        <summarizedField>Opportunity.All_Time_Direct_Sales__c</summarizedField>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>All_Time_Sales1__c</fullName>
        <description>Replaces an existing rollup that combines all sales for both DTP and CC</description>
        <formula>Total_DTP_Sales__c + Total_Cash_Carry_Sales2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>All Time Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_1__c</fullName>
        <label>Sales Revenue 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_2__c</fullName>
        <label>Sales Revenue 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_3__c</fullName>
        <label>Sales Revenue 3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Ave_Gallons_Exported__c</fullName>
        <inlineHelpText>Related Market segment information for Exporter</inlineHelpText>
        <label>Annual Ave.# Gallons Exported</label>
        <picklist>
            <controllingField>Market_Segment__c</controllingField>
            <picklistValues>
                <fullName>100-300 Gallons</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>301-600 Gallons</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>601 or more Gallons</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Annual_Ave_Shipments__c</fullName>
        <inlineHelpText>Related Market Segment information for Exporter</inlineHelpText>
        <label>Annual Ave. Shipments</label>
        <picklist>
            <controllingField>Market_Segment__c</controllingField>
            <picklistValues>
                <fullName>1-3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4-6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7 or more</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Annualized_C_C_Revenue__c</fullName>
        <description>Annualized cash and carry.  The date needs to be manually update after each POS upload per month</description>
        <formula>CC_TYTD1__c  +(
( CC_TYTD1__c  / 
   (  $Setup.Actual_Sales_Dates__c.End_Date__c  -Date(YEAR(today()), 01, 01)

) )

* (Date(YEAR(today()), 12, 31) - $Setup.Actual_Sales_Dates__c.End_Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Annualized C&amp;C Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Annualized_Revenue__c</fullName>
        <formula>DTP_TYTD1__c  + Projected_Revenue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Annualized DTP Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annualized_Total_Revenue__c</fullName>
        <formula>Annualized_C_C_Revenue__c + Annualized_Revenue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Annualized Total Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Associations__c</fullName>
        <label>Associations</label>
        <picklist>
            <controllingField>Industry_Affiliations__c</controllingField>
            <picklistValues>
                <fullName>BOMA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NARI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NIGP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PDCA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NAHRO</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Average_Order_Size_Gallons__c</fullName>
        <label>Average Order Size (Gallons)</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BehrMastCustID__c</fullName>
        <label>BehrMastCustID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Behr_Customer_Spend_increase__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Behr Customer spend  increase US</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Behr_Customer_spend_decrease_US__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Behr Customer spend decrease US</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Behr_account_manger__c</fullName>
        <label>Behr account manger</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <picklist>
            <picklistValues>
                <fullName>Behr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kilz Premium</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_Owner__c</fullName>
        <label>Business Owner</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Business</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_license_registration_No__c</fullName>
        <label>Business license registration No.</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CAI_Chapter__c</fullName>
        <label>CAI Chapter</label>
        <picklist>
            <picklistValues>
                <fullName>Alabama Chapter (In Organization) - Alabama and vicinity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austin Chapter - Austin and vicinity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bay Area and Central California Chapter - Bay Area, San Francisco, Stockton, and Central California</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>California North Chapter - Sacramento and Northern California</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central Arizona Chapter - Phoenix and vicinity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central Indiana Chapter - Indianapolis and vicinity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central Ohio Chapter - Columbus and vicinity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central Virginia Chapter - Richmond and vicinity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Channel Islands Chapter - San Luis Obispo, Ventura, Santa Barbara, Kern County, and vicinity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chesapeake Chapter - Maryland (excluding suburban DC) and Southern Delaware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coachella Valley Chapter - Palm Springs and Coachella Valley</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connecticut Chapter - Connecticut</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dallas/Ft. Worth Chapter - Dallas/Ft. Worth and vicinity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Georgia Chapter - Georgia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gold Coast Chapter - Central Eastern Florida (Palm Beach, Boca Raton, and vicinity)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greater Alaska Chapter - Alaska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greater Houston Chapter - Houston and vicinity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greater Inland Empire Chapter - San Bernardino and Riverside Counties</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greater Los Angeles Chapter - Los Angeles and vicinity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hawaii Chapter - Hawaii</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hudson Valley Chapter - Hudson Valley</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Illinois Chapter - Illinois</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jacksonville Metropolitan Chapter (In Organization) - Jacksonville and vicinity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kentucky Chapter - Kentucky</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Long Island Chapter - Long Island</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Louisiana Chapter (In Organization) - Louisiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Michigan Chapter - Michigan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mid-Florida Chapter - Orlando and vicinity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minnesota Chapter - Minnesota</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nevada Chapter - Nevada</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CAI_Location__c</fullName>
        <description>U.S. State CAI Chapter is located</description>
        <label>CAI Location</label>
        <picklist>
            <picklistValues>
                <fullName>Alabama</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alaska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arizona</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>California</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colorado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connecticut</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delaware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>District of Columbia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Florida</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Georgia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hawaii</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Illinois</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kentucky</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Louisiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maryland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Massachusetts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Michigan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minnesota</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missouri</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nevada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Hampshire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Jersey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Mexico</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New York</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North Carolina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ohio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oregon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pennsylvania</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CC_LY1__c</fullName>
        <description>rollup CC LY</description>
        <label>CC LY</label>
        <summarizedField>Opportunity.CC_LY__c</summarizedField>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CC_LYTD1__c</fullName>
        <description>rollup CC LYTD</description>
        <label>CC LYTD</label>
        <summarizedField>Opportunity.CC_LYTD__c</summarizedField>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CC_Rolling_Year1__c</fullName>
        <description>rollup CC Rolling Year</description>
        <label>CC Rolling Year</label>
        <summarizedField>Opportunity.CC_Rolling_Year__c</summarizedField>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CC_TY1__c</fullName>
        <description>Rollup instead of calcs</description>
        <label>CC TY</label>
        <summarizedField>Opportunity.CC_TY__c</summarizedField>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CC_TYTD1__c</fullName>
        <description>rollup CC TYTD</description>
        <label>CC TYTD</label>
        <summarizedField>Opportunity.CC_TYTD__c</summarizedField>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CC_plus_DTP__c</fullName>
        <formula>Total_Actuals_TY__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CC plus DTP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Chapter_Market_Region__c</fullName>
        <label>Chapter/Market Region</label>
        <picklist>
            <picklistValues>
                <fullName>Channel Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Detroit Metro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GLAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greater Dallas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Illinois</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mid-Florida</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National Association</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New England</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regional Association</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>San Diego</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Southern Arizona</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suncoast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Washington Metro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Washington State</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West Florida</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Commercial_Construction__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Commercial Construction</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <label>Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <label>Contact Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contractor_Category__c</fullName>
        <inlineHelpText>Please select contractor type.</inlineHelpText>
        <label>Contractor Category</label>
        <picklist>
            <controllingField>Market_Sub_Segment__c</controllingField>
            <picklistValues>
                <fullName>Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cash &amp; Carry (2010)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exporter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Institutional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Investor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MRO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multi-family Housing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Painting Contractor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Property Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Remodeler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Restoration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Single-family housing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Store Carryout (2011)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contractor_Sub_category__c</fullName>
        <description>Sub-category linked to Contractor Category in Key Market Segment.</description>
        <inlineHelpText>Please select one.</inlineHelpText>
        <label>Contractor Sub-category</label>
        <picklist>
            <controllingField>Contractor_Category__c</controllingField>
            <picklistValues>
                <fullName>Commercial Construction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Builder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospitality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Military/Govt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multi-family Builder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>School</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contractor_Type__c</fullName>
        <description>Contractor Type</description>
        <label>Contractor Type</label>
        <picklist>
            <picklistValues>
                <fullName>Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cash &amp; Carry Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial  Construction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exporter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Contractor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Builder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospitatlity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Military/Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MRO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multi-Family Builder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Painter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Property Investor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Property Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Remodeler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Restoration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Store Carryout Customer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contractor__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this contractor a General Contractor?</description>
        <label>General Contractor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_Supplier__c</fullName>
        <label>Primary Supplier (Non Behr)</label>
        <picklist>
            <picklistValues>
                <fullName>Benjamin Moore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comex (Frazee/Kwal/Color Wheel/Parker)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dunn Edwards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Glidden</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kelly Moore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PPG (Olympic/Pittsburgh/Porter)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sherwin-Williams</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Valspar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vista</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Current_Year_Total_Budget1__c</fullName>
        <label>Current Year Total Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Customer_Spend_Category__c</fullName>
        <formula>If( Total_Actuals_TY__c &lt;= 0, &quot;0&quot;,If( Total_Actuals_TY__c &lt; 5000, &quot;&gt;5,000&quot;, If(Total_Actuals_TY__c &lt; 10000, &quot;5-9,999&quot;, If(Total_Actuals_TY__c &lt; 25000, &quot;10,000-24,999&quot;, IF(Total_Actuals_TY__c &lt; 50000, &quot;25,000-49,999&quot;, If(Total_Actuals_TY__c &lt; 100000, &quot;50,000-99,999&quot;, &quot;100,000+&quot;))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Spend Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DTP_LY1__c</fullName>
        <description>rollup DTP LY</description>
        <label>DTP LY</label>
        <summarizedField>Opportunity.DTP_LY__c</summarizedField>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>DTP_LYTD1__c</fullName>
        <description>rollup DTP LYTD</description>
        <label>DTP LYTD</label>
        <summarizedField>Opportunity.DTP_LYTD__c</summarizedField>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>DTP_Rolling_Year1__c</fullName>
        <description>rollup DTP Rolling Year</description>
        <label>DTP Rolling Year</label>
        <summarizedField>Opportunity.DTP_Rolling_Year__c</summarizedField>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>DTP_TY1__c</fullName>
        <description>rollup DTP TY</description>
        <label>DTP TY</label>
        <summarizedField>Opportunity.DTP_TY__c</summarizedField>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>DTP_TYTD1__c</fullName>
        <description>rollup DTP TYTD</description>
        <label>DTP TYTD</label>
        <summarizedField>Opportunity.DTP_TYTD__c</summarizedField>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>D_B_Score__c</fullName>
        <label>D&amp;B Score</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Account Details Captured&quot;, &quot;Missing: &quot;&amp;IF( ISPICKVAL( Industry,&quot;&quot;),&quot;Industry, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(ISPICKVAL(Rating,&quot;&quot;), &quot;Rating, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(BillingCity) = 0, &quot;Complete Address, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(Phone) = 0, &quot;Phone, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL(Type,&quot;&quot;), &quot;Type&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF( ISPICKVAL(Industry,&quot;&quot;), 0,20) + IF( ISPICKVAL(Rating,&quot;&quot;), 0,20) + IF( LEN(BillingCity) = 0, 0,20) + IF(LEN(Phone) = 0, 0,20) + IF( ISPICKVAL(Type,&quot;&quot;), 0,20)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_Rcvd__c</fullName>
        <label>Date Rcvd</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Dealer_Status__c</fullName>
        <label>Dealer Status</label>
        <picklist>
            <picklistValues>
                <fullName>Potential</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Existing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dealer_established_date__c</fullName>
        <label>Dealer established date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delivery_time__c</fullName>
        <label>Delivery time</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Direct_LYTD__c</fullName>
        <description>Rolluup of Direct sales LYTD</description>
        <label>Direct LYTD</label>
        <summarizedField>Opportunity.Direct_LYTD__c</summarizedField>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Direct_Sale__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Direct Sale</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Direct_TYTD__c</fullName>
        <description>This Year To Date Direct sales rollup</description>
        <label>Direct TYTD</label>
        <summarizedField>Opportunity.Direct_TYTD__c</summarizedField>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Distribution_sales_revenue__c</fullName>
        <label>Distribution sales revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DupeBlocker_Insert_Action__c</fullName>
        <label>DupeBlocker Insert Action</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DupeBlocker_Update_Action__c</fullName>
        <label>DupeBlocker Update Action</label>
        <length>100</length>
        <type>Text</type>
    </fields>
</CustomObject>